log
Fri 12 May 2023 12:38:57 AM UTC: 
 heap.c | 57 ++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 52 insertions(+), 5 deletions(-)
 tests:  5|2
total_score: 50/70
b100369
Fri 12 May 2023 12:40:56 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
2cf6248
Fri 12 May 2023 02:30:49 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
6f93bd5
Fri 12 May 2023 04:26:43 PM UTC: 
 heap.c | 63 ++++++++++++---------------------------------------------------
 1 file changed, 12 insertions(+), 51 deletions(-)
 tests:  0|4
total_score: 0/70
60d4052
Fri 12 May 2023 04:27:28 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|3
total_score: 10/70
b413091
Fri 12 May 2023 04:28:43 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
20a7782
Fri 12 May 2023 04:28:56 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   23 |   return pq->heapArray[1] ;
      |          ~~~~~~~~~~~~~^~~
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
369fc28
Fri 12 May 2023 04:29:55 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
e163a1d
Fri 12 May 2023 04:30:13 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
d7763c7
Fri 12 May 2023 04:30:56 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
9d83d9f
Fri 12 May 2023 04:31:10 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
a0ae204
Fri 12 May 2023 04:33:42 PM UTC: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
edca8ff
Fri 12 May 2023 04:33:57 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
2c73686
Fri 12 May 2023 04:34:10 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
bab8e47
Fri 12 May 2023 04:35:07 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4b28506
